# cpp_exercises

./: .gitignore  README.md
calc/: CMakeLists.txt  main.cpp
jsonParser/: CMakeLists.txt  config.json  jsonParser.cpp
menu/: CMakeLists.txt  menu.cpp  menu.h
prime_numbers/: .gitignore  CMakeLists.txt  main.cxx  tutorial.cxx
